ide/all: Silence some Java deprecation warnings - modernize
new T(x) => T.valueOf(x)
where T is: Integer, Long, Float, Double, Boolean, Character

new Boolean(true) => Boolean.TRUE
new Boolean(false) => Boolean.FALSE

Comparator => Comparator<String>